Prepare Products.SimpleReference 0.1a2.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+0.1a2 2011-11-23
+----------------
+
+- fixed referencing of contents
+
 0.1a1 2011-11-07
 ----------------
 
