--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,14 +1,11 @@
 Changelog
 =========
 
-0.1a3 - 2011-12-01
-------------------
+0.1a[2-5] - 2011-12-01
+----------------------
 
+- fix introduction
 - fix description
-
-0.1a2 - 2011-12-01
-------------------
-
 - fixed referencing of contents
 
 0.1a1 - 2011-11-07
