--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+0.1b1 - 2011-12-07
+------------------
+
+- entering beta state
+
 0.1a[2-5] - 2011-12-01
 ----------------------
 
