Prepare Products.SimpleReference 0.1b2.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,10 +1,12 @@
 Changelog
 =========
 
-0.1b1 - 2011-12-07
-------------------
+0.1b[1-2] - 2011-12-07
+----------------------
 
 - entering beta state
+- documentation fixes
+
 
 0.1a[2-5] - 2011-12-01
 ----------------------
